--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -16,7 +16,7 @@
     color: var(--accent);
 }
 
-body{
+body {
     overflow-x: hidden;
 }
 
@@ -45,16 +45,16 @@ body{
     background-color: var(--primary);
 }
 
-.card{
+.card {
     border-radius: 1rem;
 }
 
 .card-body {
     border-radius: 0 0 1rem 1rem;
-    height: 200px;
+    height: 220px;
 }
 
-.card-image-size{
+.card-image-size {
     margin: 10px 0 10px 0;
     width: 128px;
     height: 128px;
@@ -77,12 +77,17 @@ body{
 }
 
 .jump {
-    transition: all .2s ease-in-out;
+    transition: all .15s ease-in-out;
   }
   
 .jump:hover {
-    transform: translateY(-0.5rem);
+    transform: translateY(-0.5rem) scale(1.02);
+    
   }
+
+.jump:active {
+  transform: translateY(200rem);
+}
 
 .primary {
     color: var(--primary);
@@ -101,7 +106,7 @@ p {
     height: 80vh; 
 }
 
-.informationfooter p{
+.informationfooter p {
     margin-bottom: 0;
 }
 
@@ -154,7 +159,7 @@ p {
 {
   color:#737373
 }
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+.footer-links a:active, .footer-links a:focus, .footer-links a:hover
 {
   color:#3366cc;
   text-decoration:none;
